--- a/admin/partials/interfaces/Comtrol/adComtrolRevenueCenterConfig.html
+++ b/admin/partials/interfaces/Comtrol/adComtrolRevenueCenterConfig.html
@@ -2,7 +2,7 @@
     <div class="inline-edit">
         <header class="content-title float">
             <h2>Revenue Centers</h2>
-            <span class="count">({{revCenters.length}})</span>
+            <span class="count">({{revCenters.length - state.deletedCount}})</span>
             <a ng-click="goBackToPreviousState()" class="action back" translate>BACK</a>
             <button ng-click="onClickAdd()" class="action add" scrollup="replacing-div-first">Add new</button>
         </header>
@@ -25,6 +25,7 @@
                                         required="yes"></ad-textbox>
                             <ad-textbox styleclass="full-width" value="state.new.name"
                                         label="{{'NAME' | translate}}"
+                                        required="yes"
                                         placeholder="{{'NAME' | translate}}"></ad-textbox>
                         </fieldset>
                         <div class="actions float">
@@ -33,6 +34,8 @@
                                 CANCEL
                             </button>
                             <button type="button" ng-click="onSave()" class="button green edit-data-inline"
+                                    ng-class="{'grey' : state.new.name == '' || state.new.code == ''}"
+                                    ng-disabled="state.new.name == '' || state.new.code == ''"
                                     translate>
                                 SAVE_CHANGES
                             </button>
@@ -40,9 +43,11 @@
                     </form>
                 </div>
             </div>
-            <table id="brands" class="grid datatable dataTable" ng-table="itemList" template-pagination="nil">
+            <table id="brands" class="grid datatable dataTable"
+                   ng-show="revCenters.length - state.deletedCount > 0"
+                   ng-table="itemList" template-pagination="nil">
                 <tbody>
-                <tr ng-repeat="revCenter in revCenters track by $index">
+                <tr ng-repeat="revCenter in revCenters track by $index" ng-hide="revCenter.isDeleted">
                     <td data-item="1" data-title="'Code'" ng-click="onSelect($index)"
                         header-class="width-40" ng-hide="state.selected === $index">
                         <a class="edit-data-inline">{{revCenter.code}}</a>
@@ -63,7 +68,8 @@
                                 <form class="form inline-form float">
                                     <div class="form-title">
                                         <h3><span></span> {{'EDIT_REVENUE_CENTER'| translate}} </h3>
-                                        <em class="status"> {{'MANDATORY_FIELDS_MESSAGE1' | translate}} <strong>*</strong>
+                                        <em class="status"> {{'MANDATORY_FIELDS_MESSAGE1' | translate}}
+                                            <strong>*</strong>
                                             {{'MANDATORY_FIELDS_MESSAGE2' | translate}} </em>
                                     </div>
                                     <fieldset class="holder left float">
@@ -72,15 +78,20 @@
                                                     placeholder="{{'CODE' | translate}}"
                                                     required="yes"></ad-textbox>
                                         <ad-textbox styleclass="full-width" value="revCenter.name"
+                                                    required="yes"
                                                     label="{{'NAME' | translate}}"
                                                     placeholder="{{'NAME' | translate}}"></ad-textbox>
                                     </fieldset>
                                     <div class="actions float">
-                                        <button type="button" ng-click="onCancelEdit()" class="button blank edit-data-inline"
+                                        <button type="button" ng-click="onCancelEdit()"
+                                                class="button blank edit-data-inline"
                                                 translate>
                                             CANCEL
                                         </button>
-                                        <button type="button" ng-click="onUpdate()" class="button green edit-data-inline"
+                                        <button type="button" ng-click="onUpdate()"
+                                                class="button green edit-data-inline"
+                                                ng-class="{'grey' : revCenter.name == '' || revCenter.code == ''}"
+                                                ng-disabled="revCenter.name == '' || revCenter.code == ''"
                                                 translate>
                                             UPDATE
                                         </button>
