--- a/rover/partials/cards/companyCardContent.html
+++ b/rover/partials/cards/companyCardContent.html
@@ -53,7 +53,7 @@
                             <figure ng-hide="company.logo == ''" class="guest-image">
                                 <img ng-src="{{company.logo}}"/>
                             </figure>
-                            <div class="data">
+                            <div class="data" ng-class = "{'no-email': escapeNull(company.email) === '', 'no-confirmation': escapeNull(company.address.postalCode) === '', 'no-address': escapeNull(company.account_address) === '', 'no-phone': escapeNull(company.phone) === ''}">
                                 <div class="info">
                                     <h2 ng-bind-html="getHighlightedHTML(company.account_name, searchData.companyCard.companyName)"></h2>
                                     <div class="rate" ng-if="company.rate">
