--- a/admin/partials/interfaces/Comtrol/adComtrolRevenueCenterConfig.html
+++ b/admin/partials/interfaces/Comtrol/adComtrolRevenueCenterConfig.html
@@ -48,11 +48,11 @@
                    ng-table="itemList" template-pagination="nil">
                 <tbody>
                 <tr ng-repeat="revCenter in revCenters track by $index" ng-hide="revCenter.isDeleted">
-                    <td data-item="1" data-title="'Code'" ng-click="onSelect($index)"
+                    <td data-item="1" data-title="'Code'" ng-click="onSelect($index, revCenter)"
                         header-class="width-40" ng-hide="state.selected === $index">
                         <a class="edit-data-inline">{{revCenter.code}}</a>
                     </td>
-                    <td data-item="2" data-title="'Name'" ng-click="onSelect($index)"
+                    <td data-item="2" data-title="'Name'" ng-click="onSelect($index, revCenter)"
                         header-class="width-50" ng-hide="state.selected === $index">
                         <a class="edit-data-inline">{{revCenter.name}}</a>
                     </td>
@@ -88,7 +88,7 @@
                                                 translate>
                                             CANCEL
                                         </button>
-                                        <button type="button" ng-click="onUpdate()"
+                                        <button type="button" ng-click="onUpdate(revCenter)"
                                                 class="button green edit-data-inline"
                                                 ng-class="{'grey' : revCenter.name == '' || revCenter.code == ''}"
                                                 ng-disabled="revCenter.name == '' || revCenter.code == ''"
@@ -104,4 +104,5 @@
                 </tbody>
             </table>
         </section>
+    </div>
 </section>
