CICO-34750 updates zest station language tags and cleans up some html styles, moved to css

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1404,3 +1404,19 @@
 .ui-icon {
     text-indent: 0px !important; 
 }
+.demo-text{
+    float: right;
+    left: 0;
+    position: absolute;
+    color: #d8d8d8;
+    z-index: 999;
+}
+
+.add-guest-mode-content{
+    height: 75%;
+    margin-top: 50px;
+}
+.signature-pad-layout {
+    height: 295px; 
+    border-radius: 8px;
+}
