CICO-29827: Implement new logic

--- a/rover/partials/reports/vacantRoomsReport/rvVacantRoomsReportRow.html
+++ b/rover/partials/reports/vacantRoomsReport/rvVacantRoomsReportRow.html
@@ -1,6 +1,6 @@
 <tr ng-repeat="each in results track by $index">
     <td>{{ each.room_number }}</td>
-    <td>{{ each.room_type }}</td>
+    <td>{{ each.room_type_name }}</td>
     <td>{{ each.no_of_days_vacant }}</td>
     <td>{{ each.last_check_out_date }}</td>
 </tr>
