--- a/admin/partials/interfaces/Comtrol/adComtrolRevenueCenterConfig.html
+++ b/admin/partials/interfaces/Comtrol/adComtrolRevenueCenterConfig.html
@@ -45,7 +45,7 @@
             </div>
             <table id="brands" class="grid datatable dataTable"
                    ng-show="revCenters.length - state.deletedCount > 0"
-                   ng-table="itemList" template-pagination="nil">
+                   ng-table="" template-pagination="nil">
                 <tbody>
                 <tr ng-repeat="revCenter in revCenters track by $index" ng-hide="revCenter.isDeleted">
                     <td data-item="1" data-title="'Code'" ng-click="onSelect($index, revCenter)"
