CICO-34109 fixed the pagination and scroll issues

--- a/rover/css/rover_scroll_fix.css.less
+++ b/rover/css/rover_scroll_fix.css.less
@@ -172,9 +172,20 @@
   height : 500px;
 }
 .neighbours-post-container{
-  height : 2000px;
+  height : 1650px;
 }
-.add-post{
-  height : 90px !important;
+.post-delimiter{
+  color : white !important;
+}
+
+.post-with-limit{
+  display: block; 
+  overflow: hidden; 
+  
+  text-overflow: ellipsis;
+}
+
+.post-full{
+  word-wrap: break-word; 
 }
 
