CICO-29468 Templates for the Generic Mappings

--- a/admin/partials/interfaces/Comtrol/adComtrolChargeCodes.html
+++ b/admin/partials/interfaces/Comtrol/adComtrolChargeCodes.html
@@ -53,8 +53,8 @@
                                 CANCEL
                             </button>
                             <button type="button" ng-click="onSave()" class="button green edit-data-inline"
-                                    ng-class="{'grey' : state.new.charge_code_id == '' || state.new.revenue_center_code == '' || state.new.category_name == ''}"
-                                    ng-disabled="state.new.charge_code_id == '' || state.new.revenue_center_code == '' || state.new.category_name == ''"
+                                    ng-class="{'grey' : state.new.charge_code_name == '' || state.new.revenue_center_code == '' || state.new.category_name == ''}"
+                                    ng-disabled="state.new.charge_code_name == '' || state.new.revenue_center_code == '' || state.new.category_name == ''"
                                     translate>
                                 SAVE_CHANGES
                             </button>
