--- a/admin/partials/checkin/adCheckin.html
+++ b/admin/partials/checkin/adCheckin.html
@@ -126,6 +126,9 @@
                             <span class="icon-form icon-radio " ng-class="{checked:checkinData.checkin_action=='sent_to_queue'}"></span>
                             <input type="radio" value="sent_to_queue" ng-model="checkinData.checkin_action"> {{ 'SENT_TO_QUEUE' | translate}}
                         </label>
+                         <!--  -->
+                        <ad-toggle-button is-checked="checkinData.zest_web_use_new_sent_to_que_action" label="{{ 'USE_NEW_SENT_TO_QUE' | translate}}" ng-show="checkinData.checkin_action == 'sent_to_queue' && !hideAddOption" div-class="full-width margin-bottom-20-important"></ad-toggle-button>
+                        <!--  -->
                         <label class="radio" ng-class="{'checked':checkinData.checkin_action == 'auto_checkin'}">
                             <span class="icon-form icon-radio " ng-class="{checked:checkinData.checkin_action == 'auto_checkin'}"></span>
                             <input type="radio" value="auto_checkin" ng-model="checkinData.checkin_action"> {{ 'AUTO_CHECK_IN' | translate}}
@@ -135,9 +138,6 @@
                             <input type="radio" value="none" ng-model="checkinData.checkin_action"> {{ 'NONE' | translate}}
                         </label>
                     </div>
-                    <!--  -->
-                    <ad-toggle-button is-checked="checkinData.zest_web_use_new_sent_to_que_action" label="{{ 'USE_NEW_SENT_TO_QUE' | translate}}" ng-show="checkinData.checkin_action == 'sent_to_queue' && !hideAddOption"></ad-toggle-button>
-                    <!--  -->
                     <div class="entry full-width">
                         <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="checkinData.checkin_complete_confirmation_screen_text" label="{{ 'CHECK_IN_COMPLETE_CONFIRMATION_SCREEN_TEXT' | translate}}" placeholder=""></ad-textarea>
                     </div>
