CICO-34750 fixes some tags missing quotes

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1413,7 +1413,7 @@
 }
 
 .add-guest-mode-content{
-    height: 75%;
+    height: 75% !important;
     margin-top: 50px;
 }
 .signature-pad-layout {
