--- a/admin/partials/interfaces/Comtrol/adComtrolGenericMappings.html
+++ b/admin/partials/interfaces/Comtrol/adComtrolGenericMappings.html
@@ -169,7 +169,7 @@
                                                 translate>
                                             CANCEL
                                         </button>
-                                        <button type="button" ng-click="onSave()" class="button green edit-data-inline"
+                                        <button type="button" ng-click="onUpdate(mapping)" class="button green edit-data-inline"
                                                 ng-class="{'grey' : mapping.charge_code_name == '' || mapping.external_type == '' || mapping.external_code == ''}"
                                                 ng-disabled="mapping.charge_code_name == '' || mapping.external_type == '' || mapping.external_code == ''"
                                                 translate>
