--- a/admin/partials/interfaces/Comtrol/adComtrolRoomMappings.html
+++ b/admin/partials/interfaces/Comtrol/adComtrolRoomMappings.html
@@ -118,7 +118,7 @@
                                                 translate>
                                             CANCEL
                                         </button>
-                                        <button type="button" ng-click="onSave()" class="button green edit-data-inline"
+                                        <button type="button" ng-click="onUpdate(mapping)" class="button green edit-data-inline"
                                                 ng-class="{'grey' : mapping.room_no == '' || mapping.external_room == '' || mapping.external_extension == ''}"
                                                 ng-disabled="mapping.room_no == '' || mapping.external_room == '' || mapping.external_extension == ''"
                                                 translate>
