CICO-35053 moves language styling common components to layout.less

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1398,6 +1398,10 @@
             line-height: normal;
             height: 50px;
             font-size: 16px;
+            &.selected  {
+                color: @actionBackground;
+                background: transparent;
+            }
         }
     }
 }
