--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -512,16 +512,9 @@
     right:9%;
 }
 #actions {
-    .button-left-margin{
-        margin-left: 40px;
-    }
     &.languages {
         .language {
-            box-shadow: inset 0 0 0 4px #dededc;
-            &.selected  {
-                color: @white;
-                background: transparent;
-            }
+            box-shadow: inset 0 0 0 4px @grey1;
         }
     }
 }
