CICO-29468 Room Mappings Add and Listing Integrated

--- a/admin/partials/interfaces/Comtrol/adComtrolGenericMappings.html
+++ b/admin/partials/interfaces/Comtrol/adComtrolGenericMappings.html
@@ -165,7 +165,7 @@
                                     </fieldset>
 
                                     <div class="actions float">
-                                        <button type="button" ng-click="onCancelAdd()" class="button blank edit-data-inline"
+                                        <button type="button" ng-click="onCancelEdit()" class="button blank edit-data-inline"
                                                 translate>
                                             CANCEL
                                         </button>
