--- a/admin/partials/interfaces/Comtrol/adComtrolRoomMappings.html
+++ b/admin/partials/interfaces/Comtrol/adComtrolRoomMappings.html
@@ -63,16 +63,16 @@
                 <tr ng-repeat="mapping in mappings track by $index" ng-hide="mapping.isDeleted">
                     <td data-item="1" data-title="'Rover Room'" ng-click="onSelect($index, mapping)"
                         header-class="width-30" ng-hide="state.selected === $index">
-                        <a class="edit-data-inline">{{mapping.revenue_center_code}}</a>
+                        <a class="edit-data-inline">{{mapping.room_no}}</a>
                     </td>
                     <td data-item="2" data-title="'External Room'" ng-click="onSelect($index, mapping)"
                         header-class="width-30" ng-hide="state.selected === $index">
-                        <a class="edit-data-inline">{{mapping.category_name}}</a>
+                        <a class="edit-data-inline">{{mapping.external_room}}</a>
                     </td>
 
                     <td data-item="2" data-title="'External Extension'" ng-click="onSelect($index, mapping)"
                         header-class="width-30" ng-hide="state.selected === $index">
-                        <a class="edit-data-inline">{{mapping.charge_code_name}}</a>
+                        <a class="edit-data-inline">{{mapping.external_extension}}</a>
                     </td>
 
                     <td header-class="width-10" data-title="'Delete'" class="delete"
@@ -114,7 +114,7 @@
                                                     placeholder="{{'EXTERNAL_EXTENSION_PLACEHOLDER' | translate}}"></ad-textbox>
                                     </fieldset>
                                     <div class="actions float">
-                                        <button type="button" ng-click="onCancelAdd()" class="button blank edit-data-inline"
+                                        <button type="button" ng-click="onCancelEdit()" class="button blank edit-data-inline"
                                                 translate>
                                             CANCEL
                                         </button>
