--- a/admin/partials/hotel/adHotelDetails.html
+++ b/admin/partials/hotel/adHotelDetails.html
@@ -338,6 +338,14 @@
 					</div>
 				</div>
 
+				<div class="entry is-pms-tokenized" ng-if="isAdminSnt">
+					<label for="Neighbours">ENABLE NEIGHBOURS</label>
+					<div class="switch-button single" ng-class="{ on : data.is_neighbours_enabled}" >
+						<input type="checkbox" ng-model="data.is_neighbours_enabled" name="Neighbours" id="Neighbours">
+						<span class="switch-icon"></span>
+					</div>
+				</div>
+
 				<!-- will show only for standalone  & snt admin -->
 				<div class="entry is-pms-tokenized" ng-if="isAdminSnt && data.hotel_pms_type ===''">
 					<label for="hold-status-flag-enabled">Enable HOLD - flag for IBE</label>
