--- a/rover/partials/reservation/rvSummaryAndConfirm.html
+++ b/rover/partials/reservation/rvSummaryAndConfirm.html
@@ -237,6 +237,7 @@
                             form-template-url='/assets/partials/payment/rvReservationSummaryDepositPartial.html'
                             first-name="{{guestCardData.contactInfo.first_name}}"
                             last-name="{{guestCardData.contactInfo.last_name}}"
+                            only-payment-selection="reservationData.isValidDeposit"
                             reservation-ids="reservationData.reservationIds">
                     </snt-payment>
                     <div class="actions" ng-hide="showCCPage">
