--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -442,9 +442,10 @@
 }
 @media (max-width: 900px) {
     #zest-footer{
-      padding: 2% 0 10%;
+      padding: 8% 30% 30%;
       a{
         width:100%;
+        padding-bottom: 5px;
         margin-bottom:5px;
         font-size: 12px;
       }
