Style update for CICO-33706

--- a/rover/css/rate-manager.less
+++ b/rover/css/rate-manager.less
@@ -409,6 +409,10 @@
                     padding-right: 10px;
                     border-right: 1px solid rgba(0,0,0,.1);
                 }
+
+                &.card {
+                    max-width: 300px;
+                }
             }
 
             .back-button {
