CICO-34109 added error message fix

--- a/rover/css/rover_scroll_fix.css.less
+++ b/rover/css/rover_scroll_fix.css.less
@@ -169,7 +169,11 @@
 
 //SCROLL FIX IN NEIGHBOURS
 .neighbours-post-scroll{
-  height : 500px;
+  height : 350px;
+  top : 120px !important;
+}
+.neighbours-post-scroll-error{
+  top : 160px !important;
 }
 .neighbours-post-container{
   height : 1650px;
