--- a/admin/partials/interfaces/Comtrol/adComtrolGenericMappings.html
+++ b/admin/partials/interfaces/Comtrol/adComtrolGenericMappings.html
@@ -40,14 +40,13 @@
                                               class="full-width">
                             </ad-dropdown-name>
                         </fieldset>
-
                         <fieldset class="holder right float">
-                            <ad-textbox ng-if="state.new.external_type !== 'Call Accounting'"
+                            <ad-textbox ng-if="state.new.external_type !== 'call_accounting'"
                                         styleclass="full-width" value="state.new.external_code"
                                         label="{{'EXTERNAL_CODE' | translate}}"
                                         required="yes"
                                         placeholder="{{'EXTERNAL_CODE_PLACEHOLDER' | translate}}"></ad-textbox>
-                            <ad-dropdown-name ng-if="state.new.external_type === 'Call Accounting'"
+                            <ad-dropdown-name ng-if="state.new.external_type === 'call_accounting'"
                                               label-in-drop-down="{{'EXTERNAL_CODE_PLACEHOLDER' | translate}}"
                                               savemodel="state.new.external_code"
                                               valueproperty="code"
@@ -142,14 +141,13 @@
                                                           class="full-width">
                                         </ad-dropdown-name>
                                     </fieldset>
-
                                     <fieldset class="holder right float">
-                                        <ad-textbox ng-if="mapping.external_type !== 'Call Accounting'"
+                                        <ad-textbox ng-if="mapping.external_type !== 'call_accounting'"
                                                     styleclass="full-width" value="mapping.external_code"
                                                     label="{{'EXTERNAL_CODE' | translate}}"
                                                     required="yes"
                                                     placeholder="{{'EXTERNAL_CODE_PLACEHOLDER' | translate}}"></ad-textbox>
-                                        <ad-dropdown-name ng-if="mapping.external_type === 'Call Accounting'"
+                                        <ad-dropdown-name ng-if="mapping.external_type === 'call_accounting'"
                                                           label-in-drop-down="{{'EXTERNAL_CODE_PLACEHOLDER' | translate}}"
                                                           savemodel="mapping.external_code"
                                                           valueproperty="code"
