--- a/rover/partials/payment/rvReservationSummaryDepositPartial.html
+++ b/rover/partials/payment/rvReservationSummaryDepositPartial.html
@@ -4,6 +4,7 @@
            ng-class="{'checked':payment.addToGuestCardSelected}">
         <span class="icon-form icon-checkbox" ng-class="{'checked': payment.addToGuestCardSelected}"></span>
         <input ng-model="payment.addToGuestCardSelected"
+               ng-change="propagateAddToggle()"
                id="add-in-guest-card" value="1" type="checkbox"/>
         {{'ADD_TO_GUEST_CARD' | translate}}
     </label>
