CICO-34109 added the scroll fix

--- a/rover/css/rover_scroll_fix.css.less
+++ b/rover/css/rover_scroll_fix.css.less
@@ -169,14 +169,21 @@
 
 //SCROLL FIX IN NEIGHBOURS
 .neighbours-post-scroll{
-  height : 350px;
+  height : 500px;
   top : 120px !important;
 }
 .neighbours-post-scroll-error{
   top : 160px !important;
 }
 .neighbours-post-container{
-  height : 1650px;
+  height : 1750px;
+}
+.neighbours-post-container-error{
+  height : 1850px !important;
+}
+
+.neighbours-post-container-expanded{
+  height : 2000px !important;
 }
 .post-delimiter{
   color : white !important;
