--- a/admin/partials/checkin/adCheckin.html
+++ b/admin/partials/checkin/adCheckin.html
@@ -127,7 +127,7 @@
                             <input type="radio" value="sent_to_queue" ng-model="checkinData.checkin_action"> {{ 'SENT_TO_QUEUE' | translate}}
                         </label>
                          <!--  -->
-                        <ad-toggle-button is-checked="checkinData.zest_web_use_new_sent_to_que_action" label="{{ 'USE_NEW_SENT_TO_QUE' | translate}}" ng-show="checkinData.checkin_action == 'sent_to_queue' && !hideAddOption" div-class="full-width margin-bottom-20-important"></ad-toggle-button>
+                        <ad-toggle-button is-checked="checkinData.zest_web_use_new_sent_to_que_action" label="{{ 'USE_NEW_SENT_TO_QUE_WITH_UPSELLS' | translate}}" ng-show="checkinData.checkin_action == 'sent_to_queue' && !hideAddOption" div-class="full-width margin-bottom-20-important"></ad-toggle-button>
                         <!--  -->
                         <label class="radio" ng-class="{'checked':checkinData.checkin_action == 'auto_checkin'}">
                             <span class="icon-form icon-radio " ng-class="{checked:checkinData.checkin_action == 'auto_checkin'}"></span>
